# testPackage

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
src/mypackage/: __init__.py  mymodules.py
